<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_bg"
    tools:context=".InfoFragment">

    <ImageView
        android:id="@+id/img_srb"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/laguage_change_icon_for_serbian"
        android:src="@drawable/srbija" />

    <ImageView
        android:id="@+id/img_usa"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginStart="335dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/laguage_change_icon_for_english"
        android:src="@drawable/amerika" />
...
