...
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="logo">Logo</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_sign_in">Already registered, sign in!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register.</string>
    <string name="no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen_logo">Splash screen logo</string>
    <string name="astronaut_name">astronaut_name</string>
    <string name="astronaut_craft">astronaut_craft</string>
    <string name="todo">TODO</string>
    <string name="laguage_change_icon_for_english">Language change icon for English</string>
    <string name="laguage_change_icon_for_serbian">Language change icon for Serbian</string>
    <string name="powerd_by_bane">Powerd by Bane</string>
    <string name="textview">TextView</string>
    <string name="string_eng">This application is project for class Programming mobile applications, on FTN in Čačak. Creator of this app is Kristina Milanović , index 92/2020.The world of fine wines is a realm of luxury and exclusivity, where each bottle represents the culmination of centuries of viticultural expertise. Among them, the Romanée-Conti Domaine de la Romanée-Conti stands as a symbol 
    <string name="string_srb">Ova aplikacija je rađena u okviru predmeta Programiranje mobilnih aplikacija, na FTN u Čačku. Kreator ove aplikacije je Kristina Milanović, indeksa 92/2020. Svet vrhunskih vina je oblast luksuza i ekskluzivnosti, gde svaka boca predstavlja krunu vekovnog vinogradarskog iskustva. Među njima, Romanée-Conti Domaine de la Romanée-Conti stoji kao simbol prestiža, sa cijeno
    <string name="iss_photo">ISS photo</string>
    <string name="shenzou15_photo">Shenzou15 photo</string>
...
